# copains_master

./: .~lock.performance.ods#  README.md  README.md~
brev/: Makefile  brev
brev/Sources/: brev.ml  main.ml  utils.ml
chatbot/: cp_pre_syntax.txt  cp_vector_fv.txt  tempo.txt
chatbot/planerdata/: 02_model.txt  03_actions.txt  03_model.txt  x_model.txt
chatbot/solvedatacp/: 03_goalb.txt  formula_1_1.txt  formula_1_2.txt  formula_1_3.txt  formula_1_4.txt  formula_1_5.txt  formula_2_1.txt  formula_lda_1_1.txt  formula_lda_1_2.txt  formula_lda_1_3.txt  formula_lda_1_4.txt  formula_lda_1_5.txt  formula_lda_2_1.txt  pato_1.txt  pato_2.txt  pato_seq_1_1.txt  pato_seq_1_2.txt  pato_seq_1_3.txt  pato_seq_1_4.txt  pato_seq_1_5.txt  plan_1_1.txt  plan_1_2.txt  plan_1_3.txt  plan_1_4.txt  plan_1_5.txt  plan_2_1.txt  plan_final2.txt  plan_final_show.txt  tmp_actions.txt
planer/: Makefile  operators.txt  planer
sdata/: 00_axioms.touist  00_cp_pre_syntax.txt  00_cp_pre_syntax_xx.txt  00_delta0.txt  00_delta0_1.txt  00_delta0_base.txt  00_delta0_ini.txt  00_final_full.txt  00_type_counters.txt  01_ini_state.txt  01_model.txt  02_actions-vars.txt  02_actions.txt  02_actions.txt.2  02_actions.txt.4  03_goal.txt  score.txt  sinput1.txt  sinput2.txt  sinput3.txt  svol.txt  tempo.file
translations/: type_counters.txt
translations/src/: dune  main.ml
translations/src/lib/: cnf.ml  cnfExit.ml  cnfTra.ml  cnfsat.ml  eval.ml  evalTra.ml  expand.ml  lexer.mll  nnf.ml  parser.mly  pprint.ml  reduc.ml  satSolve.ml  simp.ml  tra.ml  tra2.ml  types.ml  types.mli  util.ml
(+189 files in other folders)
